@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2012 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2012-2014 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -404,7 +404,7 @@ FilmViewer::player_changed (bool frequent)
 	if (frequent) {
 		return;
 	}
-	
+
 	calculate_sizes ();
 	fetch_current_frame_again ();
 }
